--- a/Web Dev/Porfolio/style.css
+++ b/Web Dev/Porfolio/style.css
@@ -10,7 +10,7 @@ body {
 #header {
     width: 100%;
     height:90vh;
-  background-image: url("images/nba.jpg");
+  background-image: url("images/2pac.jpg");
     background-size:cover ;
     background-position: center;
 }
@@ -32,7 +32,7 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a {
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     text-decoration: none;
     font-size: 15px;
     position: relative;
@@ -58,7 +58,7 @@ nav ul li a:hover::after {
     margin-top: 20px;
 }
 .header-text h1 span{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 /* ------------about--------------- */
 #about{
@@ -76,7 +76,7 @@ nav ul li a:hover::after {
 .about-col-1 img{
     width: 100%;
     border-radius: 15px;
-    position: ;
+    
 }
 .about-col-2{
     flex-basis: 60%;
@@ -84,7 +84,7 @@ nav ul li a:hover::after {
 .sub-title{
     font-size: 40px;
     font-weight: 200;
-    color: #ffffff;
+    color: #030303;
 }
 tab-titles{
     display: flex;
@@ -101,7 +101,7 @@ tab-titles{
     content: '';
     width: 0;
     height: 3px;
-    background: #ffffff;
+    background: #000000;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -189,7 +189,7 @@ tab-titles{
 .layer{
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #000000);
+    background: linear-gradient(rgb(255, 255, 255), #000000);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -211,3 +211,91 @@ tab-titles{
     font-weight: 500;
     margin-bottom: 20px;
 }
+#services{
+    padding: 10px 0;
+}
+.services-list div h1{
+    color: rgb(0, 0, 0);
+}
+.services-list{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+    color: rgb(0, 0, 0);
+}
+.services-list div{
+    background: #040404;
+    padding: 40px;
+    font-size: larger;
+    font-weight: 600;
+    border-radius: 10px;
+    transition: background 0.6s, transform 0.5s;
+}
+.services-list div i{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.services-list div h2{
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+.services-list div a{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    margin-top: 1px;
+    display: inline-block;
+}
+.services-list div:hover{
+    background: #ffffff;
+    transform: translateY(-15px);
+}
+
+
+
+.btn.btn2{
+    display:inline-block;
+    background: #ffffff;;
+}
+.contact-right form{ 
+    width: 100%;
+}
+form input,form textarea {
+width: 100%;
+
+
+border: 0;
+outline:none;
+background:#000000;
+padding:15px;
+margin:15;
+color:#ffffff;
+font-size: 18px;
+border-radius: 6px;
+}
+
+form btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background-color: #ffffff;
+    font-weight: 300;
+    margin-top: 20px;
+}
+.copyright i{
+    color: #ffffff;
+}
+/*---------------------css for small screens--------- */
+@media only screen and (max-with: 600px){
+    #header{
+        background-image: url(images/IMG_0786.HEIC);
+    }}
+nav .fs{
